# garmincn-mcp

./: .env.example  .gitignore  Makefile  README.md  SCHEMA.md  analyze_effort.py  analyze_running_goals.py  analyze_splits_deep.py  analyze_splits_deep_v2.py  analyze_splits_deep_v3.py  analyze_vdot.py  cache_manager.py  data_output.txt  debug_activity.py  fetch_garmin_data.py  fetch_health_analysis.py  fetch_sleep_analysis.py  fetch_sleep_data.py  inspect_api.py  pyproject.toml
.agent/workflows/: garmin-data.md
.github/workflows/: auto-sync.yml
Athlete_Records/: Athlete_Profile.md
src/garmin_coach/: cli.py  config.py
src/garmin_coach/api/: garmin_client.py
src/garmin_coach/db/: garmin_db.py
src/garmin_coach/mcp/: server.py
src/garmin_coach/mcp/tools/: garmin_health.py  garmin_local.py
src/garmin_coach/sync/: sync_engine.py  user_profile_loader.py
src/mcp_server_garmincn/service/: garmincn_service.py
